fix for Firefox overflowing outside of its container

--- a/src/styles/_input-group.scss
+++ b/src/styles/_input-group.scss
@@ -18,6 +18,7 @@
     // Ensure that the input is always above the *appended* addon button for
     // proper border colors.
     position: relative;
+    overflow: hidden;
     //z-index: 2;
     @if $enable-flex {
       flex: 1;
